<?xml version="1.0"?>
<package>
  <name>laserscan_filter_nodelet</name>
  <version>1.0.0</version>
  <description>Laser Scan Filter Nodelet</description>
  <maintainer email="vinayrao@usc.edu">Vinay Rao</maintainer>
  <author>Vinay Rao</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <nodelet plugin="${prefix}/laserscan_filter_nodelet.xml"/>
  </export>
</package>

